<resources>
    <string name="app_name">My Application</string>
    <string name="Calc">Calculate</string>
    <string name="final_price">Final Price:</string>
    <string name="of_shares"># of Shares:</string>
    <string name="share_price">Share Price:</string>
    <string name="stock_manager">Stock Manager</string>
    <string name="how_many">How many?</string>
    <string name="clear">Clear</string>
    <string name="get_gme_price">Get GME price</string>
</resources>